# Flompt

./: Cargo.toml  README.md
src/: feature.rs  flow.rs  lib.rs  prompt.rs
src/feature/: async_openai.rs  retry.rs  send.rs
src/feature/async_openai/: executable.rs  executable_flow.rs  prompt_result.rs  retry.rs  send_control.rs
src/feature/retry/: executable.rs  result.rs  retry.rs
src/feature/send/: control.rs  flow.rs  result.rs
src/prompt/: context.rs  control.rs  error.rs  naive.rs  template.rs
