[package]
name = "flompt"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.16"
async-openai = {version = "0.29.3", optional = true}
serde_json = {version = "1.0.145", optional = true}
serde = {version = "1.0.225", optional = true}

[features]
async-openai = ["dep:async-openai", "dep:serde_json", "dep:serde"]